salesforce/force-app/main/default/objects/Journey_Send_Request__e/Journey_Send_Request__e.object-meta.xml
<CustomObject>
    <description>Platform Event to trigger MC Advanced Marketing Flows for personalized journeys</description>
    <label>Journey Send Request</label>
    <pluralLabel>Journey Send Requests</pluralLabel>
</CustomObject>