salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Approval_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Id__c</fullName>
    <description>Reference to the Journey_Approval__c record</description>
    <label>Approval Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>