salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Email body HTML content</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>