salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Communication channel (Email, SMS, Push)</description>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>