salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Salesforce Contact ID for the recipient</description>
    <label>Contact Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>