salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of meaningful event (Wedding, Birthday, etc.)</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>