salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Recipient first name for personalization</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>