salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL to the Firefly-generated image</description>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>