salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Journey_Id__c</fullName>
    <description>Unique identifier for the multi-step journey</description>
    <label>Journey Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>