salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Send_Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Send_Delay_Days__c</fullName>
    <description>Number of days to wait before sending this step</description>
    <label>Send Delay Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>