salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <description>Step number in the multi-step journey sequence</description>
    <label>Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>