salesforce/force-app/main/default/objects/Journey_Send_Request__e/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <description>Total number of steps in this journey</description>
    <label>Total Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>